chore: resource