@@ -2,4 +2,4 @@ FROM europe-north1-docker.pkg.dev/cgr-nav/pull-through/nav.no/jre:openjdk-25
 LABEL maintainer="team-researchops"
 COPY build/libs/app.jar app.jar
 EXPOSE 8080
-CMD ["-XX:+UseZGC", "-jar", "app.jar"]
+CMD ["-jar", "app.jar"]
